# data-pipelines-with-apache-airflow

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  entrypoint.sh  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/_workflows/: dag_integrity.yaml  static_python_checks.yaml
.github/workflows/: ci.yaml  cicd.yaml  dag_integrity.yaml  static_python_checks.yaml
chapter01/: README.md  docker-compose.yml
chapter01/dags/: 01_umbrella.py
chapter02/: docker-compose.yml
chapter02/dags/: 02_download_rocket_launches.py  04_BashOperator.py  06_PythonOperator_get_pictures.py  11_download_rocket_launches.py  L02_download_rocket_launches.py  L03_download_rocket_launches.py  L04_BashOperator.py  L06_PythonOperator_get_pictures.py  L11_download_rocket_launches.py  download_rocket_launches.py  listing_2_03.py  listing_2_04.py  listing_2_06.py  listing_2_10.py  listing_2_2.py  (+3 more)
chapter03/: README.md  docker-compose.yml
chapter04/: .env  docker-compose.yml
chapter05/: README.md  docker-compose.yml
chapter06/: README.md  docker-compose.yml
chapter07/: .airflowignore  .env  README.md  docker-compose.yml
chapter08/: README.md  docker-compose.yml
chapter10_1_docker/: README.md
chapter11/: README.md
chapter12/: docker-compose.yml
chapter14/: README.md  docker-compose.yml
chapter15/: .gitignore  README.md  docker-compose.yml
chapter16/: README.md
chapter17/: .env.template  README.md
chapter18/: .env.template  README.md  docker-compose.yml
docker/: Dockerfile  docker-compose-LocalExecutor.yml  entrypoint.sh
executor-local/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
executor-sequential/: Dockerfile  README.md  entrypoint.sh
tests/: conftest.py
(+661 files in other folders)
